Bug 40068 - LibreOffice doesn't remember the search path when saving Basic code and dialogues to a file.
Summary: LibreOffice doesn't remember the search path when saving Basic code and dialo...
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: BASIC (show other bugs)
Version:
(earliest affected)
3.3.3 release
Hardware: All Linux (All)
: medium minor
Assignee: Samuel Mehrbrodt
URL:
Whiteboard: target:7.3.0
Keywords:
: 97060 (view as bug list)
Depends on:
Blocks: Macro-UNOAPI
  Show dependency treegraph
 
Reported: 2011-08-13 23:00 UTC by Johnny Rosenberg
Modified: 2022-03-10 09:19 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Johnny Rosenberg 2011-08-13 23:00:36 UTC
Open a macro for edit.
Click ”Save BASIC” if you are in a Basic module or ”Export Dialog” if you are in a dialogue module.
Navigate to a folder somewhere else than the one that seems to be default.
Save your code as a file.
Now try the same thing again.

Problems:
You need to click all the way down to your folder each time, which is very annoying if you have many modules to save. It should open with your path pre-selected from all your modules, shouldn't it?

Entering your path in text works sometimes and sometimes not. Sometimes it says that my path is not valid, even if I enter it like /home/blahblah/A_folder/Another_folder/And_so_on.

I entered version 3.3.3, because that's the version I use, but I don't think this works in any version. Maybe I'm wrong, though.
Comment 1 Björn Michaelsen 2011-12-23 12:34:29 UTC Comment hidden (obsolete)
Comment 2 Florian Reisinger 2012-08-14 14:02:02 UTC Comment hidden (obsolete)
Comment 3 Florian Reisinger 2012-08-14 14:03:03 UTC Comment hidden (obsolete)
Comment 4 Florian Reisinger 2012-08-14 14:07:37 UTC Comment hidden (obsolete)
Comment 5 Florian Reisinger 2012-08-14 14:09:43 UTC Comment hidden (obsolete)
Comment 6 Johnny Rosenberg 2012-08-14 18:08:12 UTC
I just tried this in 3.5.5.3 and it seems like the problem persists. Am I supposed to open a new bug report or is changing status to REOPENED enough?
Comment 7 Florian Reisinger 2012-08-16 11:31:53 UTC
Everything is okay, no need to open another bug..
Comment 8 QA Administrators 2015-01-05 17:51:24 UTC Comment hidden (obsolete)
Comment 9 Johnny Rosenberg 2015-01-05 22:14:39 UTC
Tried with 4.2.6.3 and it still doesn't take me to the most recent directory. However I can easily get there by selecting from the Recent Files thing, but I think that's rather an operating system feature (Ubuntu 14.04 in my case) than a LibreOffice feature.

Maybe that's good enough, I don't know. I don't use LibreOffice anymore anyway, so if I'm the only one who complain about this I guess you could just drop it.
Comment 10 QA Administrators 2016-01-17 20:02:42 UTC Comment hidden (obsolete)
Comment 11 QA Administrators 2017-03-06 13:56:39 UTC Comment hidden (obsolete)
Comment 12 Johnny Rosenberg 2017-04-08 21:16:04 UTC
Tested this today with LibreOffice Calc 5.2.6.2, Ubuntu 14.04. The problem is still there.
Comment 13 QA Administrators 2018-04-09 02:31:19 UTC Comment hidden (obsolete)
Comment 14 Johnny Rosenberg 2018-04-14 10:36:43 UTC
The bug is still present:
Version: 6.0.3.2
Build ID: 6.0.3-1
CPU threads: 12; OS: Linux 4.14; UI render: standard; VCL: gtk3; 

Operating system: Manjaro XFCE Edition
Comment 15 Buovjaga 2019-08-11 09:28:15 UTC
Still repro.

Arch Linux 64-bit
Version: 6.4.0.0.alpha0+
Build ID: 37fc9f51a8de11d40632e8cda17ccf1fa4b1f503
CPU threads: 8; OS: Linux 5.2; UI render: default; VCL: gtk3; 
Locale: fi-FI (fi_FI.UTF-8); UI-Language: en-US
Calc: threaded
Built on 6 August 2019
Comment 16 himajin100000 2019-09-20 23:36:47 UTC
not reproducible on Windows

Version: 6.4.0.0.alpha0+ (x64)
Build ID: 4342aaef0c4d6cd5c51fd2b74328bb4df5fb71dd
CPU threads: 4; OS: Windows 10.0; UI render: default; VCL: win; 
TinderBox: Win-x86_64@42, Branch:master, Time: 2019-09-20_06:31:38
Locale: ja-JP (ja_JP); UI-Language: en-US
Calc: CL
Comment 17 Samuel Mehrbrodt 2021-07-14 07:05:32 UTC
*** Bug 97060 has been marked as a duplicate of this bug. ***
Comment 18 Commit Notification 2021-07-14 14:30:27 UTC
Samuel Mehrbrodt committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/9a55b97e980bbf2a0ce12841f6168f1f7545ac96

tdf#40068 Remember last directory for basic/dialog import/export

It will be available in 7.3.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.