tdf#40068 Remember last directory for basic/dialog import/export

Change-Id: I9dee98a2018beb0b8d5a0e57b66dbd9d5390c71c
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/118883
Tested-by: Jenkins
Reviewed-by: Samuel Mehrbrodt <samuel.mehrbrodt@allotropia.de>